welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: ';' expected but 'if' found.
else {avance() if (getCouleurSol() == Color.green) { test = true}
               ^